--- a/Synapse/src-tauri/Cargo.toml
+++ b/Synapse/src-tauri/Cargo.toml
@@ -15,12 +15,25 @@ name = "synapse_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["global-shortcut"] }
-tauri-plugin-window = "2"
-tauri-plugin-shell = "2"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.5", features = [
+    "global-shortcut-all",
+    "window-create",
+    "window-hide",
+    "window-show",
+    "window-start-dragging",
+    "window-unminimize",
+    "window-minimize",
+    "window-close",
+    "window-maximize",
+    "window-unmaximize",
+    "window-set-decorations",
+    "window-set-always-on-top",
+    "window-set-size",
+    "window-set-position"
+] }
 window-shadows = "0.2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
