--- a/Synapse/package.json
+++ b/Synapse/package.json
@@ -24,12 +24,13 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.9",
-    "@types/node": "^20.0.0",
+    "@types/events": "^3.0.3",
+    "@types/node": "^20.17.16",
     "prettier": "^3.2.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.3"
+    "@tauri-apps/api": "^1.6.0"
   }
 }
